syntax = "proto3";

package org.ostelco.ocs.api;

option java_multiple_files = true;
option java_package = "org.ostelco.ocs.api";

import "google/protobuf/timestamp.proto";

// This is used only to report to Analytics engine by Prime via Google Cloud Pub/Sub.
// This may be moved to a separate library project, in future.

message DataTrafficInfo {
    string msisdn = 1;
    uint64 bucketBytes = 2;
    uint64 bundleBytes = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message AggregatedDataTrafficInfo {
    string msisdn = 1;
    uint64 dataBytes = 2;
    string dateTime = 3;
}